Use ngAnimate for p status transitions

--- a/src/demo/layout.html
+++ b/src/demo/layout.html
@@ -7,6 +7,7 @@
 
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/angular/angular.js"></script>
+    <script src="/bower_components/angular-animate/angular-animate.js"></script>
     <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="/bower_components/clipboard/dist/clipboard.js"></script>
     <script src="/dist-temp/ng-mr-uex.js"></script>
