demo: import the main sass file instead of using the compiled css

--- a/src/demo/layout.html
+++ b/src/demo/layout.html
@@ -13,7 +13,7 @@
     <script src="/dist-temp/ng-mr-uex.js"></script>
     <script src="/demo/demo.js"></script>
 
-    <link href="/dist-temp/ng-mr-uex.css" rel="stylesheet">
+    <!-- <link href="/dist-temp/ng-mr-uex.css" rel="stylesheet"> -->
     <link href="/demo/demo.css" rel="stylesheet">
 
     <script>
